Melhorado a forma como os elementos se dispões no jogo

--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 
 
-
+<div>
 <a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar.png" class="BotaoIniciar"/></a>
-
-    
+</div>
