--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -9,6 +9,8 @@
             <label asp-for="Nome">Nome </label>
             <input class="form-control" asp-for="Nome" />
         </div>
+    <div class="container-fluid">
+        
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
                 <label>
@@ -22,8 +24,8 @@
                 <label>
                     <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old">A velha louca
                 </label>
-
-                       
+            </div>
+                           
         </div>
 
        <div>
