--- a/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
@@ -1,15 +1,45 @@
 ﻿@model SetepassosPRJ.Models.Perfil
 @{
 }
-
-
-
+<div class="container-fluid">
+<div class="container">
+    <div class="areadados">
 <div>
-    <img src="~/images/Rooms/Room1 monstro.png" alt="Falha a carregar imagem" class="areajogo" />
+    <img src="~/images/Icons/icon-moeda.png" class="icons" />  3
+</div>
+<div>
+    <img src="~/images/Icons/icon-vida.png" class="icons" />  8
 </div>
 
 <div>
-    <a asp-action="" role="button"><img src="~/images/btns/btn-atacar.png" class="BotaoJogar" /></a>
-    <a asp-action="" role="button"><img src="~/images/btns/btn-fugir.png" class="BotaoJogar" /></a>
-    <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotaoJogar" /></a>
+    <img src="~/images/Icons/icon-forca.png" class="icons" />  3
+</div>
+
+<div>
+    <img src="~/images/Icons/icon-luck.png" class="icons" />  1
+</div>
+
+<div>
+    <img src="~/images/Icons/icon-pocaoVida.png" class="icons" />  2
+</div>
+</div>
+</div>
+
+<div class="container">
+    <img src="~/images/Rooms/Room1 monstro.png" alt="Falha a carregar imagem" class="areajogavel"/>
+
+</div>
+
+<div class="container">
+<div class="areabotoes">
+    <div>
+    <a asp-action="" role="button"><img src="~/images/btns/btn-atacar.png" class="BotoesJogo" /></a>
+    </div>
+    <div><a asp-action="" role="button"><img src="~/images/btns/btn-fugir.png" class="BotoesJogo" /></a>
+    </div>
+    <div>
+    <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a>
+    </div>
+</div>
+</div>
 </div>
