--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -8,12 +8,7 @@ body {
     font-size: 14px;
 }
 
-.footer {
-    position: absolute;
-    width: 100%;
-    height: 2.5rem; 
-    margin-bottom: 30px;
-}
+
 
 
 .BotaoIniciar:hover {
@@ -38,7 +33,7 @@ body {
 
 #backg {
     position: fixed;
-    top: -40%;
+    top: -50%;
     left: -50%;
     width: 200%;
     height: 200%;
@@ -74,18 +69,26 @@ body {
 }
 
 .charpick {
-   width: 260px;
-   height: 260px;
+   width: 22%;
+   height: 22%;
+}
+
+.BotoesJogo {
+    width: 130px;
+    height: 70px;
+}
+.BotoesJogo:hover {
+     filter: brightness(1.4);
 }
 
 
 label {
-    color: ghostwhite;
-    font-weight: bold;
-    padding: 4px;
+    color: beige;
+    font-weight:bold;
+    padding: 2px;
     text-transform: uppercase;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 75%;
 }
 
 
@@ -185,7 +188,7 @@ input[type='radio'] {
 
 
 .dados {
-    float: left;
+    float:left;
     margin-top: 20px  
 }
 
@@ -196,10 +199,38 @@ input[type='radio'] {
 }
 
 .areajogo {
-    float:left;
-    position:relative;
+    float: left;
+    position: relative;
     width: 640px;
     height: 520px;
-    display:inline-block;
- }
+    padding-right:5px;
+    display: inline-block;
+}
 
+/*experience*/
+
+
+.areajogavel {
+    position:fixed;
+    width: 65%;
+    height: 70%;
+    display: inline-block;
+    margin-top:60px;
+    left:16%;
+}
+.areadados {
+    position: fixed;
+    width: 20%;
+    height: 20%;
+    left:5%;
+    margin-top:15px;
+    display: inline-block;
+}
+.areabotoes {
+    position: fixed;
+    width: 10%;
+    height: 10%;
+    display: inline-block;
+    right:80px;
+    margin-top:50px;
+}
