Alteração link página monstro

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -90,25 +90,28 @@
 </div>
 
 <div class="container">
-<div class="areabotoes">
-    <div>
-        <a asp-action="" role="button"><img src="~/images/btns/btn-avancar.png" class="BotoesJogo" /></a>
+    <div class="areabotoes">
+        <div>
+            <a asp-action="" role="button"><img src="~/images/btns/btn-avancar.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="" role="button"><img src="~/images/btns/btn-recuar.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="" role="button"><img src="~/images/btns/btn-examinar.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="CriarJogo" role="button"><img src="~/images/btns/btn-recomecar.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="" role="button"><img src="~/images/btns/btn-desistir.png" class="BotoesJogo" /></a>
+        </div>
+        <div>
+            <a asp-action="JogoMonstro">Página do monstro</a>
+        </div>
     </div>
-    <div>
-        <a asp-action=""  role="button"><img src="~/images/btns/btn-recuar.png" class="BotoesJogo" /></a>
-    </div>
-    <div>
-        <a asp-action="JogoMonstro" role="button"><img src="~/images/btns/btn-examinar.png" class="BotoesJogo" /></a>
-    </div>
-    <div>
-        <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a>
-    </div>
-    <div>
-        <a asp-action="CriarJogo" role="button"><img src="~/images/btns/btn-recomecar.png" class="BotoesJogo" /></a>
-    </div>
-    <div>
-        <a asp-action="" role="button"><img src="~/images/btns/btn-desistir.png" class="BotoesJogo" /></a>
-    </div>
-</div>
 </div>
 </div>
