Alterado visual do botao e os Chars na escolha de chars. Alterado os Headers e texto.

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -13,16 +13,16 @@
         
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
-                <label>
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>O Nerd
+                <label class="ArrangeChars">
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>Nerd
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
-                <label>
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat">O Gordo
+                <label class="ArrangeChars">
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat">Gordo
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
-                <label>
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old">A velha louca
+                <label class="ArrangeChars">
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old">velha louca
                 </label>
             </div>
                            
