--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -5,19 +5,21 @@ body {
     padding-bottom: 10px;
     color: ghostwhite;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 19px;
+    letter-spacing: 1px;
 }
 
 
 .BotaoIniciar {
     height: 25%;
     width: 25%;
+    filter: brightness(1.4);
 }
 
 .BotaoIniciar:hover {
     height: 26%;
     width: 26%;
-    filter: brightness(1.4);
+    filter: brightness(1.6);
 }
 
 .BotaoJogar:hover {
@@ -74,6 +76,11 @@ body {
 .charpick {
    width: 22%;
    height: 22%;
+}
+.ArrangeChars {
+    display: inline-block;
+    margin-right: 2%;
+    font-size: 70%;
 }
 
 .BotoesJogo {
@@ -214,4 +221,21 @@ input[type='radio'] {
     display: inline-block;
     right:80px;
     margin-top:50px;
+}
+
+/* headers com estilo */
+h1 {
+    color: gold;
+    text-decoration: underline;
+    letter-spacing: 2px;
+    text-shadow: 0px 0px 2px cyan;
+}
+h2 {
+    color: gainsboro;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 2px black;
+}
+
+h3 {
+    color: darkcyan;
 }
