fixes #1 Inserida a coluna com a posição e divisao da coluna das poçoes em coluna de poções obtidas e poções usadas.

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -2,9 +2,10 @@
     ViewData["Title"] = "HiScores";
 }
     <div class="text-center">
-        <table id="tabela" class="table table-bordered">
+        <table id="tabela" class="table table-condensed">
             <thead>
                 <tr>
+                    <th class="text-center" scope="col">Posição</th>
                     <th class="text-center" scope="col">Nome Jogador</th>
                     <th class="text-center" scope="col">Pontuação (Moedas de Ouro)</th>
                     <th class="text-center" scope="col">Resultado Final</th>
@@ -13,11 +14,13 @@
                     <th class="text-center" scope="col">Fugas do Inimigo</th>
                     <th class="text-center" scope="col">Áreas Investigadas</th>
                     <th class="text-center" scope="col">Itens Encontrados</th>
-                    <th class="text-center" scope="col">Poções Usadas/Totais</th>
+                    <th class="text-center" scope="col">Poções Obtidas</th>
+                    <th class="text-center" scope="col">Poções Usadas</th>
                 </tr>
             </thead>
             <tbody>
                 <tr id="1" class="classe1">
+                    <td>1º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -26,9 +29,11 @@
                     <td>2</td>
                     <td>1</td>
                     <td>1</td>
+                    <td>3</td>
                     <td>3</td>
                 </tr>
                 <tr id="2" class="classe1">
+                    <td>2º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -37,9 +42,11 @@
                     <td>2</td>
                     <td>1</td>
                     <td>1</td>
+                    <td>3</td>
                     <td>3</td>
                 </tr>
                 <tr id="3" class="classe1">
+                    <td>3º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -49,8 +56,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>4º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -60,8 +69,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>5º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -71,8 +82,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>6º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -82,8 +95,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>7º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -93,8 +108,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>8º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -104,8 +121,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>9º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -115,8 +134,10 @@
                     <td>1</td>
                     <td>1</td>
                     <td>3</td>
+                    <td>3</td>
                 </tr>
                 <tr class="classe2">
+                    <td>10º</td>
                     <td>José</td>
                     <td>3500</td>
                     <td>Vitória</td>
@@ -125,6 +146,7 @@
                     <td>2</td>
                     <td>1</td>
                     <td>1</td>
+                    <td>3</td>
                     <td>3</td>
                 </tr>
             </tbody>
