--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,5 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
+.sala {
+    background-image: url('../images/Rooms/Room1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+}
+
 body {
     padding-top: 60px;
     padding-bottom: 10px;
@@ -7,8 +14,8 @@ body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 15px;
     letter-spacing: 1px;
+    background-image: url('../images/Layout/Entrance v1.png')
 }
-
 
 .BotaoIniciar {
     height: 25%;
@@ -239,3 +246,4 @@ h2 {
 h3 {
     color: darkcyan;
 }
+
