--- a/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
@@ -1,8 +1,6 @@
 ﻿@model SetepassosPRJ.Models.Perfil
 @{
 }
-<div class="container-fluid">
-<div class="container">
     <div class="areadados">
 <div>
     <img src="~/images/Icons/icon-moeda.png" class="icons" />  3
@@ -23,14 +21,12 @@
     <img src="~/images/Icons/icon-pocaoVida.png" class="icons" />  2
 </div>
 </div>
-</div>
 
-<div class="container">
+<div>
     <img src="~/images/Rooms/Room1 monstro.png" alt="Falha a carregar imagem" class="areajogavel"/>
 
 </div>
 
-<div class="container">
 <div class="areabotoes">
     <div>
     <a asp-action="" role="button"><img src="~/images/btns/btn-atacar.png" class="BotoesJogo" /></a>
@@ -40,6 +36,4 @@
     <div>
     <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a>
     </div>
-</div>
-</div>
 </div>
