fixes #3 Adicionada mais informação á página inicial. Uma intro e os top 3 dos hi-scores.

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -40,14 +40,13 @@
         </div>
 
         <div>
-            <img src="~/images/Icons/icon-key.png" class="icons" />
             @if (Model.Chave)
             {
-                @:Sim
+            <img src="~/images/Icons/icon-key.png" class="icons" />
             }
             else
             {
-                @:Não
+            <img src="~/images/Icons/icon-no-key.png" class="icons" />
             }
         </div>
 
