--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -14,15 +14,15 @@
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>Nerd
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="S" checked>Nerd
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat">Gordo
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W">Gordo
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old">velha louca
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">velha louca
                 </label>
             </div>
                            
