--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container container-fluid body-content">
+    <div class="container body-content">
         @RenderBody()
     </div>
 
