--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -231,28 +231,22 @@ input[type='radio'] {
 
 .areajogavel {
     background-image: url(../images/Rooms/AreaJogo.jpg);
-    position: fixed;
-    width: 65%;
-    height: 70%;
-    display: inline-block;
+    width: 100%;
+    height: 500px;
     margin-top: 60px;
-    left: 16%;
 }
 
 .areadados {
     position: fixed;
     width: 20%;
     height: 20%;
-    left:5%;
-    margin-top:15px;
-    display: inline-block;
+    margin-top:25px;
 }
 .areabotoes {
     position: fixed;
     width: 10%;
     height: 10%;
-    display: inline-block;
-    right:80px;
+    right:200px;
     margin-top:50px;
 }
 
